# qq-dicebot

./: .appveyor.yml  .clang-format  .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  CMakeLists.txt  CMakeSettings.json  CQDicebot.sln  LICENSE  README.chs.md  README.md  REFERENCE.md  app.json  app_id.txt  bootstrap.ps1  com.dynilath.coolqdicebot.json  configure.ts  index.ts  invite_controller.ts  package.json  tsconfig.json
CQDicebot/: CQDicebot.vcxproj  CQDicebot.vcxproj.filters  DiceRoller.cpp  DiceRoller.h  NickNameControl.cpp  NickNameControl.h  QTool.cpp  QTool.h  appmain.cpp  appmain.h  base64.h  com.dynilath.coolqdicebot.json  cqp.h  databaseManager.cpp  databaseManager.h  database_manager.cpp  database_manager.h  diceSpliter.cpp  diceSpliter.h  dice_protocol.cpp  dice_protocol.h  dice_protocols_manager.cpp  dice_protocols_manager.h  dice_spliter.cpp  dice_spliter.h  dllmain.cpp  encoder.cpp  encoder.h  manualDiceControl.cpp  manualDiceControl.h  manual_dice_control.cpp  manual_dice_control.h  manualdice.cpp  manualdice.h  messagepipeline.cpp  messagepipeline.h  nickManager.cpp  nickManager.h  nick_manager.cpp  nick_manager.h  (+12 more)
CQDicebot/lib_Debug/: sqlite3.idb  sqlite3.lib
CQDicebot/lib_Release/: sqlite3.lib
UnitTest/: UnitTest.vcxproj  stdafx.h  unittest1.cpp
dicelet/: slr.py  slr.txt
scripts/: build.ps1  build_linux_test.ps1  deps.ps1  generate.ps1  generate_linux_test.ps1  post_build.ps1
src/: config.h  cqtool.cpp  cqtool.h  main.cpp  oicq_func.hpp  oicq_impl.cpp  plugin.cc  test.cpp
src/cqsdk/: common.h
src/cqsdk/utils/: string.cpp
src/dicebot/: common.cpp  common.h  constants.h  database_manager.cpp  database_manager.h  dice_excepts.h  dice_roller.cpp  dice_roller.h  dice_spliter.cpp  dice_spliter.h  dice_utils.cpp  dice_utils.h  dicebot.cpp  dicebot.h  encoder.h  event_info.h  manual_dice.cpp  manual_dice.h  manual_dice_control.cpp  manual_dice_control.h  nick_manager.cpp  nick_manager.h  number.h  profile.h  profile_manager.cpp  profile_manager.h  protocol_base.h  protocol_coc_dice.cpp  protocol_coc_dice.h  protocol_manager.cpp  protocol_manager.h  protocol_manual_dice.cpp  protocol_manual_dice.h  protocol_nickname.cpp  protocol_nickname.h  protocol_profile.cpp  protocol_profile.h  protocol_roll_dice.cpp  protocol_roll_dice.h  protocol_specialized_dice.cpp  (+3 more)
src/dicebot/data/: database_manager.cpp  database_manager.h  manual_dice_control.cpp  manual_dice_control.h  nick_manager.cpp  nick_manager.h  poker_manager.cpp  poker_manager.h  profile_manager.cpp  profile_manager.h
src/dicebot/entity/: manual_dice.cpp  manual_dice.h  poker.cpp  poker.h  profile.h
src/dicebot/entry/: entry_base.h  entry_manager.cpp  entry_manager.h  entry_manual_dice.cpp  entry_manual_dice.h  entry_nickname.cpp  entry_nickname.h  entry_poker.cpp  entry_poker.h  entry_profile.cpp  entry_profile.h  entry_roll_dice.cpp  entry_roll_dice.h  entry_specialized_dice.cpp  entry_specialized_dice.h  output_constructor.h  wrappers.h
src/dicebot/parser/: dicenalyzer.cpp  dicenalyzer.h  parser.cpp  parser.h  syntax.h  token.h  tokenizer.cpp  tokenizer.h
src/dicebot/random/: random_provider.cpp  random_provider.h
src/dicebot/utils/: archive.h  integer_utf8.h  logger.cpp  logger.h  number.cpp  number.h  pair_hash.h  string_part.cpp  string_part.h  string_utils.cpp  string_utils.h  string_view.h  utils.cpp  utils.h
src/tests/: data_test.cpp  entry_test.cpp  htest.cpp  number_test.cpp  roll_test.cpp  test.cmake
src/utils/: base64.hpp  xoroshiro128starstar.hpp
